--- a/styles.css
+++ b/styles.css
@@ -841,7 +841,7 @@ img.loaded {
 /* ── FOOTER ── */
 footer {
   background: #232323;
-  margin-top: 20rem;
+  margin-top: 4rem;
   margin-left: 40px;
   margin-right: 40px;
   margin-bottom: 30px;
